Fixing issue where newsletter banner covered top of right-rail navigation

--- a/sass/_helpers.scss
+++ b/sass/_helpers.scss
@@ -46,7 +46,7 @@ HELPERS
 
 .gray-text {color: #ccc;}
 
-.affix {top: 4em;}
+.affix {top: 6em;}
 
 .affix-bottom {position: absolute;}
 
